--- a/static/uploads/vasr_guidelines_short_2.html
+++ b/static/uploads/vasr_guidelines_short_2.html
@@ -29,22 +29,22 @@ Solve the image that best solves the analogy<br>
 
 <p><img class="center-fit" src="https://github.com/yonatanbitton/vasr_mturk_examples/blob/main/examples/guidelines_short/1.png?raw=true" alt=""><br>
 <strong>Answer</strong>: 4<br>
-<strong>A → A'</strong>: <u>dog</u> yawning → <u>baby</u> yawning<br>
-<strong>B → B'</strong>: <u>dog</u> drooling → <u>baby</u> drooling<br>
+<strong>A → A'</strong>: <u>dog</u> yawning -> <u>baby</u> yawning<br>
+<strong>B → B'</strong>: <u>dog</u> drooling -> <u>baby</u> drooling<br>
 </p>
 
 <hr>
 
 <p><img class="center-fit" src="https://github.com/yonatanbitton/vasr_mturk_examples/blob/main/examples/guidelines_short/2.png?raw=true" alt=""><br>
 <strong>Answer</strong>: 2<br>
-<strong>A → A'</strong>: woman <u>feeling cold</u> → woman <u>smiling</u><br>
-<strong>B → B'</strong>: man <u>feeling cold</u> → man <u>smiling</u><br>
+<strong>A → A'</strong>: woman <u>feeling cold</u> -> woman <u>smiling</u><br>
+<strong>B → B'</strong>: man <u>feeling cold</u> -> man <u>smiling</u><br>
 </p>
 
 <hr>
 
 <p><img class="center-fit" src="https://github.com/yonatanbitton/vasr_mturk_examples/blob/main/examples/guidelines_short/3.png?raw=true" alt=""><br>
-<strong>Answer</strong>: 3<br>
-<strong>A → A'</strong>: person unlocking <u>house</u> → person unlocking <u>car</u><br>
-<strong>B → B'</strong>: truck towing <u>house</u> → truck towing <u>car</u><br>
+<strong>Answer</strong>: 4<br>
+<strong>A → A'</strong>: people whipping a <u>horse</u> -> people whipping a <u>man</u><br>
+<strong>B → B'</strong>: man patting a <u>horse</u> -> man patting a <u>man</u><br>
 </p>
