--- a/static/uploads/vasr_guidelines_short.html
+++ b/static/uploads/vasr_guidelines_short.html
@@ -29,22 +29,24 @@ Solve the image that best solves the analogy<br>
 
 <p><img class="center-fit" src="https://github.com/yonatanbitton/vasr_mturk_examples/blob/main/examples/guidelines_short/1.png?raw=true" alt=""><br>
 <strong>Answer</strong>: 4<br>
-<strong>A → A'</strong>: <u>dog</u> yawning → <u>baby</u> yawning<br>
-<strong>B → B'</strong>: <u>dog</u> drooling → <u>baby</u> drooling<br>
+<strong>A → A'</strong>: <b><i><i>dog</i></i></b> yawning → <b><i>baby</i></b> yawning<br>
+<strong>B → B'</strong>: <b><i>dog</i></b> drooling → <b><i>baby</i></b> drooling<br>
 </p>
 
 <hr>
+<br>
 
 <p><img class="center-fit" src="https://github.com/yonatanbitton/vasr_mturk_examples/blob/main/examples/guidelines_short/2.png?raw=true" alt=""><br>
 <strong>Answer</strong>: 2<br>
-<strong>A → A'</strong>: woman <u>feeling cold</u> → woman <u>smiling</u><br>
-<strong>B → B'</strong>: man <u>feeling cold</u> → man <u>smiling</u><br>
+<strong>A → A'</strong>: woman <b><i>feeling cold</i></b> → woman <b><i>smiling</i></b><br>
+<strong>B → B'</strong>: man <b><i>feeling cold</i></b> → man <b><i>smiling</i></b><br>
 </p>
-
 <hr>
+<br>
+
 
 <p><img class="center-fit" src="https://github.com/yonatanbitton/vasr_mturk_examples/blob/main/examples/guidelines_short/3.png?raw=true" alt=""><br>
 <strong>Answer</strong>: 3<br>
-<strong>A → A'</strong>: person unlocking <u>house</u> → person unlocking <u>car</u><br>
-<strong>B → B'</strong>: truck towing <u>house</u> → truck towing <u>car</u><br>
+<strong>A → A'</strong>: person unlocking <b><i>house</i></b> → person unlocking <b><i>car</i></b><br>
+<strong>B → B'</strong>: truck towing <b><i>house</i></b> → truck towing <b><i>car</i></b><br>
 </p>
