--- a/static/uploads/vasr_guidelines_short.html
+++ b/static/uploads/vasr_guidelines_short.html
@@ -1,9 +1,19 @@
 <h1 id="instructions">Instructions</h1>
 <br>
 
+<p>In the following you are expected to solve an analogy problem.<br>You will be shown three pictures: A, A', B.<br>There is <em>some</em> change going from picture A to picture A'<br> For example, A is a <b><i>dog</b></i> yawning and A' is a <b><i>baby</b></i> yawning - the change is dog → baby.
+<p>
+<br> 
 <p>You need to choose an option out of 4 images.<br>
-Solve the image that best solves the analogy<br>
+Choose the image that best solves the analogy<br>
 <strong>A is to A' as B is to?</strong></p>
+<br> 
+<p>We recomment solving the analogies in computer, not mobile phone, as you'll need to see the images in large screen to succeed.</p><br> 
+
+<p>To solve it, understand what is the <strong>key difference</strong> between A and A', and map it to B.</p>
+<p>It's possible to have several differences between A and A'. Search for the difference that allows to choose a candidate that solves the analogy.</p>
+<p>The difference between the images is one of the <b>roles</b> in the image: <br>(1) who is the <b>agent</b> in the image (man, horse, car, motorcycle, etc); <br>(2) the <b>verb</b> or the activity the agent is doing (e.g.,: a man <b>nailing</b> a nail); <br>(3) the <b>tool</b> the agent is using (e.g., a man nailing a nail with a <b>hammer</b>); <br>(4) the <b>item</b> that is effected by the agent (e.g., a man nailing a <b>nail</b>).</p>
+<br>
 
 <br>
 
